# research-computing-with-cpp

./: .clang-format  .gitignore  .travis.yml  .travis_publish.sh  CMakeLists.txt  Dockerfile  Gemfile  LICENSE.md  Makefile  README.md  _config.yml  _template.html  all.md  build.sh  cover.html  cover.md  deploy.py  deploy_key.enc  dexy.yaml  dexyplugin.yaml  index.html  index.md  intro.md  liquify.rb  pyproject.toml  report.latex
.circleci/: config.yml
01cpp/: index.md  sec011CMake.md  sec01Introduction.md  sec01Research.md  sec01Review.md  sec02Git.md  sec02LanguageRecap.md  sec02Review.md  sec03NextSteps.md  sec04FurtherReading.md  sec04MemoryManagement.md  sec04UnitTesting.md  sec05Exceptions.md  sec05Inheritance.md  sec05LanguageRecap.md  sec06Construction.md  sec06Exceptions.md  sec06NextSteps.md  sec07Construction.md  sec07MemoryManagement.md  sec07RAII.md  sec08ProgramToInterfaces.md  sec08SummaryOfPatterns.md  sec09SummaryOfPatterns.md  sec10SummaryOfPatterns.md  sec13UnitTesting.md
01projects/: UsingTheTerminal.html  UsingTheTerminal.md  index.html  index.md  sec01Git.html  sec01Git.md  sec01IntroToCpp.html  sec01IntroToCpp.md  sec02CppSyntax.html  sec02CppSyntax.md  sec02IntroToCpp.html  sec02IntroToCpp.md  sec03MultipleFiles.html  sec03MultipleFiles.md  sec04CMakeHelloWorld.md  sec05BuildHelloWorld.md  sec05Git.html
01research/: index.md  sec01Research.md  sec02Git.md  sec03CMake.md  sec04CMakeBasics.md  sec04UnitTesting.md  sec05CMakeIntermediate.md  sec06UnitTesting.md
02cpp/: index.md  sec02EssentialReading.md  sec03MemoryManagement.md  sec03TemplatesIntro.md  sec05LanguageRecap.md  sec07Inheritance.md  sec09MemoryManagement.md  sec10ConstructionPatterns.md  sec10MemoryManagement.md  sec11MemoryManagement.md  sec12ProgramToInterfaces.md  sec13SummaryOfPatterns.md  sec14FurtherReading.md
02cpp/cpp/: CMakeLists.txt
02cpp/cpp/explicitInstantiation/: explicitInstantiation.h
02cpp/cpp/fraction/: CMakeLists.txt  fraction.h
02cpp/cpp/implicitInstantiation/: CMakeLists.txt
02cpp/cpp/memory/: CMakeLists.txt  Fraction.h  fractionExceptionMakeShared.cc  fractionExceptionProblem.cc  fractionOnHeap.cc  fractionOnHeapSharedPtr.cc  fractionOnHeapUniquePtr.cc  fractionOnHeapWeakPtr.cc  fractionUniquePtrMove.cc
02cpp/cpp/pairClassExample/: pairClassExample.h
02cpp/cpp/shape/: shape.h
02cpp/cpp/snippets/: constructorDependency.cc  setterInjection.cc
02cpp1/: index.html  index.md  pass_by_value_or_reference.md  sec01LanguageRecap.md  sec01StandardLibrary.md  sec01Types.html  sec01Types.md  sec02OOConcepts.md  sec02PassByValueOrReference.html  sec02PassByValueOrReference.md  sec03ObjectOrientedProgramming.html  sec03ObjectOrientedProgramming.md  sec03Pointers.md  sec04FunctionTemplates.md  sec04StandardLibrary.html  sec04StandardLibrary.md  sec05Pointers.html  sec05Pointers.md  smart_pointers.md  standard_library.md
02libraries/: index.md  sec01ChoosingLibraries.md  sec02LibraryBasics.md  sec02LinkingLibraries.md  sec03UsingLibraries.md  sec04Examples.md  sec05CMakeCatchTemplate.md  sec05Summary.md  sec10Summary.md
02stl/: index.md  sec01Motivation.md  sec02Containers.md  sec03Other.md
02templates/: 01FunctionTemplates.md  02ClassTemplates.md  03TemplateMeta.md  index.md  sec01FunctionTemplates.md  sec02ClassTemplates.md  sec03TemplateMeta.md
02templates/cpp/: CMakeLists.txt
02templates/cpp/TMPFactorial/: TMPFactorial.cc
02templates/cpp/explicitInstantiation/: CMakeLists.txt  explicitInstantiation.h
02templates/cpp/implicitInstantiation/: implicitInstantiation.h
02templates/cpp/vectorExample/: CMakeLists.txt
03cpp/: index.md  sec01LanguageRecap.md  sec02EssentialReading.md  sec09ConstructionPatterns.md  sec13SummaryOfPatterns.md
03cpp2/: exceptions.md  index.html  index.md  inheritance.md  object_oriented_progamming.md  sec01Exceptions.html  sec01Exceptions.md  sec01ObjectOrientedProgramming.md  sec01StandardLibrary.md  sec02ErrorHandling.html  sec02ErrorHandling.md  sec02Inheritance.md  sec02SmartPointers.md  sec03CMake.md  sec03CMakeBasics.html  sec03CMakeBasics.md  sec03Exceptions.md  sec03LambdaExpressions.md  sec04Exceptions.md  sec04UnitTesting.html  sec04UnitTesting.md  sec05SoftwareBuilds.html  sec05SoftwareBuilds.md  sec06CMakeBackground.html  sec06CMakeBackground.md  sec07CMakeHelloWorld.html  sec08BuildHelloWorld.html
03cpplibraries/: index.md
03cpppatterns/: index.md  sec08DependencyInjection.md  sec13SummaryOfPatterns.md
03libraries/: 01Libraries.md  index.md  sec01Libraries.md  sec02EIGEN.md  sec02LinkingLibraries.md  sec03Boost.md  sec03UsingLibraries.md  sec04Examples.md  sec04IncludingLibraries.md  sec05Summary.md
04HPC/: 01Background.md  index.md  sec01Background.md  sec03Usage.md  sec05FurtherReading.md
04cpp3/: designing_classes.md  exceptions.md  index.html  index.md  sec01DesigningClasses.md  sec01Inheritance.html  sec01Inheritance.md  (+17 more)
05OpenMP/cpp/wavelets/: CMakeLists.txt  main.cc  wavelets.cc  wavelets.h
06MPI/cpp/: CMakeLists.txt  catch.hpp  collective.cc  hello.cc  point2point.cc  reduce.cc  ring.cc  scatter.cc  split.cc
09Accelerators/cpp/arrayfire/: CMakeLists.txt  max_norm.cc
09Accelerators/cpp/saxpy/: CMakeLists.txt  saxpy.h
11Performance/cpp/: CMakeLists.txt  Dockerfile  awful.cc  less_bad.cc  micro_benchmark.cc
95Performance/cpp/: CMakeLists.txt
session03/cpp/ITK/: CMakeLists.txt  ITKAdd.cc  ITKThreshold.cc
session06/cpp/: CMakeLists.txt  all2all.cc  catch.hpp  collective.cc  helloCatch.cc  point2point.cc  scatter.cc  split.cc
session07/cpp/parallel/: CMakeLists.txt  visualise.py
session07/cpp/parallel/deploy/: legion.sh.mko
session07/cpp/parallel/src/: BinaryWriter.cpp  CMakeLists.txt  ParallelWriter.cpp  SingleWriter.cpp  Smooth.cpp  Smooth.h  SmoothWriter.h  TextWriter.cpp  TextWriter.h  XdrWriter.cpp  XdrWriter.h  parallel_main.cpp
session07/cpp/parallel/test/: CMakeLists.txt  catch.cpp  catch_mpi.cpp
session09/cpp/cublas/: CMakeLists.txt  cublas_sgemm.c
session09/cpp/saxpy/: CMakeLists.txt  Makefile  cublas.c  main.c  saxpy.c  saxpy.h  saxpy_fast.c  thrust.cu
(+569 files in other folders)
