cmake_minimum_required(VERSION 2.8.8)
project(ResearchComputingWithCPP)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")

#Add the c++11 flag if needed, whatever it is
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
if(COMPILER_SUPPORTS_CXX11)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
elseif(COMPILER_SUPPORTS_CXX0X)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
else()
        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
endif()

add_subdirectory(01research/cpp)
add_subdirectory(02cpp/cpp)
add_subdirectory(02stl/cpp)
add_subdirectory(03libraries/cpp)
add_subdirectory(04HPC/cpp)
add_subdirectory(05OpenMP/cpp)
add_subdirectory(06MPI/cpp)
add_subdirectory(07MPIExample/cpp)
add_subdirectory(09Accelerators/cpp)
add_subdirectory(97TemplateMetaProg/cpp)
