add_subdirectory(vectorExample)
add_subdirectory(sumFunctionExample)
add_subdirectory(explicitInstantiation)
add_subdirectory(implicitInstantiation)
add_subdirectory(pairClassExample)
add_subdirectory(TMPFactorial)
add_subdirectory(TMPLoopUnrolling)
add_subdirectory(TMPPolicy)
add_subdirectory(TMPTrait)
