add_library(saxpy saxpy.c)
add_executable(time-saxpy.x timer.c)
target_link_libraries(time-saxpy.x saxpy)
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    target_compile_options(saxpy PRIVATE -fno-vectorize)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_compile_options(saxpy PRIVATE -fno-tree-loop-vectorize)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
    target_compile_options(saxpy PRIVATE -no-vec)
endif()


add_library(saxpy-vec saxpy-vec.c)
add_executable(time-saxpy-vec.x timer.c)
target_link_libraries(time-saxpy-vec.x saxpy-vec)
if ("${CMAKE_CXX_COMPILER_ID}" MATCHES "Clang")
    target_compile_options(saxpy-vec PRIVATE -fvectorize)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    target_compile_options(saxpy-vec PRIVATE -ftree-loop-vectorize)
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Intel")
    target_compile_options(saxpy-vec PRIVATE -vec)
endif()
